@@ -1,9 +1,10 @@
 1.0.4
+	You can now tap the hold box to hold your current Tetrimino.
+		You are able to turn this feature off in the settings.
+	Jetris now follows the Super Rotation System exactly!
 	Improved performance for displaying the grid.
 	Highscores now updates during the game.
 		While displayed it doesn't fully save until the game is reset or paused.
-	You can now tap the hold box to hold your current Tetrimino.
-		You are able to turn this feature off in the settings.
 	Restructured the game sequence to better display a loss.
 	Improved performance when a Tetrimino is on delay.
 	"T-spin" have been renamed to "Twist" to account for spins that are not with the T-Tetrimino.
